Remove offline check.

As it caused if there's cache, even translation succeeded it will still
reports failure. :(

We will revisit the fix after googleo@'s refactoring.

BUG=724355

Review-Url: https://codereview.chromium.org/2897573002
Cr-Commit-Position: refs/heads/master@{#473742}

Former-commit-id: 8d5f674e5ca5d6a9f0a2a9163bdba3615b2a83dd